# disk-arcana

./: .audit.toml  .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  deny.toml  disk.toml.example
crates/disk-cli/: Cargo.toml
crates/disk-cli/src/: agents_cmd.rs  archive_cmd.rs  commands.rs  config_tenant.rs  daemon.rs  embeddings_cmd.rs  main.rs  org_cmd.rs  paths.rs  selective_sync_cmd.rs  share_init.rs  sharing_cmd.rs  snapshots_cmd.rs  trash_cmd.rs  vault.rs  versions_cmd.rs
crates/disk-cli/tests/: it_cli_config_reload.rs  it_cli_config_validate.rs  it_cli_status.rs  it_daemon_smoke.rs  it_local_e2e_writeback.rs  it_share_init.rs  it_vault_unlock.rs
crates/disk-client/: Cargo.toml
crates/disk-client/examples/: plugin_test_daemon.rs
crates/disk-client/lints/: check_dev_flags_not_in_prod.sh  check_dev_flags_not_in_prod_selftest.sh  check_loopback_bind.sh
crates/disk-client/src/: blob_cache.rs  conflict_writer.rs  connection.rs  embeddings_sweep.rs  enrollment.rs  import_state.rs  keychain.rs  lib.rs  main.rs  mtls.rs  telemetry.rs  vault_key.rs
crates/disk-client/src/config/: mod.rs  reload.rs  schema.rs  validate.rs
crates/disk-client/src/lan_sync/: discovery.rs  fetch.rs  mod.rs  registry.rs  serve.rs
crates/disk-client/src/rest_api/: conflicts.rs  embeddings.rs  lan.rs  mod.rs  status.rs  sync.rs
crates/disk-client/src/sync_loop/: mod.rs  wire.rs
crates/disk-client/src/watcher/: mod.rs
crates/disk-client/tests/: it_config_loader.rs  it_conflict_apply.rs  it_conflict_cycle.rs  it_download_share_header.rs  it_enrollment_e2e.rs  it_enrollment_tls_domain.rs  it_grpc_wire_up.rs  it_hot_reload.rs  it_import_state_dry_run.rs  it_mtls_perms_audit.rs  it_rest_loopback_only.rs  it_rest_sync_and_reload.rs  it_status_schema.rs  it_symlink_escape_import.rs  it_tls_domain.rs  it_upload_hardening.rs  it_watcher_debounce.rs
crates/disk-client/tests/fixtures/: full.toml  full.windows.toml  minimal.toml  minimal.windows.toml  status-example.json
crates/disk-core/: Cargo.toml
crates/disk-core/benches/: hardening.rs
crates/disk-core/migrations/: 001_init.sql  002_nodes.sql  003_acl_enrollment.sql  004_vclock.sql  005_node_baselines.sql  006_billing.sql  007_tenant_vaults.sql  008_enrollment_tenant.sql  009_tenant_baseline_index.sql  010_node_baselines_tenant_pk.sql  011_user_accounts.sql  012_user_accounts_oauth.sql  013_consent_events.sql  014_file_versions.sql  015_vault_snapshots.sql  016_vault_sharing.sql  017_device_selective_sync.sql  018_user_onboarding.sql  019_user_telemetry.sql  020_agent_api.sql  021_agent_webhook_signing_secret.sql  022_organizations.sql  023_user_org_context.sql
crates/disk-core/proptest-regressions/delta/: rolling.txt
crates/disk-core/src/: archive.rs  config.rs  content_store.rs  error.rs  filter.rs  lib.rs  path_guard.rs  platform.rs  selective_sync.rs  tenant.rs  tenant_db.rs  tombstone.rs  traits.rs  types.rs  vector_clock.rs
crates/disk-core/src/accounts/: jwt.rs  mod.rs  password.rs
crates/disk-core/src/agents/: mod.rs  webhook_sig.rs
crates/disk-core/src/billing/: mod.rs  quota.rs  stripe.rs  stripe_sig.rs  tier.rs
crates/disk-core/src/conflict/: fork.rs  merge.rs  mod.rs
crates/disk-core/src/delta/: chunker.rs  mod.rs  reconcile.rs  rolling.rs  strong.rs
crates/disk-core/src/e2ee/: download.rs  error.rs  escrow.rs  exchange_overlay.rs  mod.rs  upload.rs
crates/disk-core/src/embeddings/: manifest.rs  mod.rs  paths.rs  scan.rs  write.rs
crates/disk-core/src/meta_db/: accounts.rs  agents.rs  billing.rs  compliance.rs  conflicts.rs  consent.rs  dashboard.rs  files.rs  mod.rs  node_baseline.rs  nodes.rs  onboarding.rs  orgs.rs  selective_sync.rs  sharing.rs  snapshots.rs  telemetry.rs  tombstones.rs  trash.rs  versions.rs
crates/disk-core/src/reconciler/: mod.rs  tree.rs  triple.rs
crates/disk-core/src/scanner/: hash.rs  mod.rs  rename.rs  walk.rs
crates/disk-core/tests/: e2ee_round_trip.rs  integration_round_trip.rs  load_scan.rs  metadata_lifecycle.rs  reconciler_matrix.rs  scanner_e2e.rs  schema_smoke.rs
crates/disk-gui/: Cargo.toml
crates/disk-gui/assets/: README.md  disk-arcana.icns  icon-256.rgba
crates/disk-gui/src/: conflicts_client.rs  gui.rs  lib.rs  main.rs  settings.rs  status_client.rs
crates/disk-proto/: Cargo.toml  build.rs
crates/disk-proto/src/: lib.rs
crates/disk-server/: Cargo.toml  README.md
crates/disk-server/lints/: no_branch_on_client_config.rs  no_branch_on_client_config.sh
crates/disk-server/src/: config.rs  health.rs  lib.rs  main.rs  tls.rs
crates/disk-server/src/accounts/: email_verify.rs  email_verify_mode.rs  jwks.rs  jwt_mode.rs  jwt_service.rs  mod.rs  mode.rs  oauth.rs  oauth_mode.rs  oidc_client.rs  routes.rs  token_refresh.rs
crates/disk-server/src/acl/: loader.rs  mod.rs  reload.rs
crates/disk-server/src/agents/: dispatch.rs  mod.rs  routes.rs
crates/disk-server/src/audit/: mod.rs  ops_bot.rs
crates/disk-server/src/auth/: api_key.rs  cert_fingerprint.rs  cert_identity.rs  mod.rs  rate_limit.rs  register_gate.rs  storage.rs
crates/disk-server/src/billing/: mod.rs  (+3 more)
crates/disk-server/tests/: acl_gpg_verifier.rs  acl_load_paths.rs  acl_reload_concurrent.rs  acl_role_mismatch.rs  acl_unhealthy_default_deny.rs  audit_ops_bot_delivery.rs  auth_accounts.rs  auth_rate_limit.rs  auth_required.rs  decompression_bomb.rs  delta_upload_commit.rs  enrollment_expired_token.rs  enrollment_rate_limit.rs  enrollment_token_replay.rs  it_enrollment_real_binary.rs  it_main_boot_wiring.rs  load_sync_round_trip.rs  log_redaction.rs  mtls_cert_required.rs  node_revocation.rs  publisher_signature_failure.rs  publisher_signature_success.rs  quota_enforcement.rs  register_node_gate.rs  replay_protection.rs  telemetry_http.rs  tenant_db_file_isolation.rs  tenant_exchange_isolation.rs  tenant_session_validation.rs  tenant_upload_isolation.rs  tls_downgrade.rs  two_node_round_trip.rs  vclock_concurrent_writes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: apply_plan.rs  path_validate.rs  proto_decode.rs  reconcile.rs
(+166 files in other folders)
