[workspace]
resolver = "2"
members = [
    "crates/disk-proto",
    "crates/disk-core",
    "crates/disk-server",
    "crates/disk-client",
    "crates/disk-cli",
    "crates/disk-gui",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
license      = "MIT"
repository   = "https://github.com/Arcanada-one/disk-arcana"
authors      = ["Pavel Valentov <paxbeach@gmail.com>"]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tonic       = { version = "0.14", features = ["tls-ring", "transport"] }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
prost       = "0.14"
prost-types = "0.14"
blake3      = { version = "1", features = ["serde"] }
zstd        = "0.13"
sqlx        = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
notify      = "8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml_ng = "0.10"
toml        = "1.1"
clap        = { version = "4", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum       = "0.7"
thiserror  = "2"
anyhow     = "1"
rustls      = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-acme = { version = "0.12", features = ["tokio"] }
rcgen       = { version = "0.14", features = ["x509-parser"] }
adler32     = "1"
pem         = "3"
base32      = "0.5"
dashmap     = "6"
rand        = "0.9"
proptest    = "1"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
keyring     = "3"
time        = { version = "0.3", default-features = false, features = ["std", "formatting", "macros"] }
walkdir     = "2.5"
argon2          = "0.5"
chacha20poly1305 = "0.10"
jsonwebtoken    = "9"

[profile.release]
lto             = "fat"
codegen-units   = 1
opt-level       = 3
strip           = "symbols"
panic           = "abort"
