[package]
name         = "disk-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana CLI (Phase 1 stub)."

[[bin]]
name = "disk"
path = "src/main.rs"

[dependencies]
disk-core          = { path = "../disk-core" }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
