[package]
name         = "disk-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana CLI (Phase 1 stub)."

[[bin]]
name = "disk"
path = "src/main.rs"

[dependencies]
disk-core          = { path = "../disk-core" }
disk-client        = { path = "../disk-client" }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
hex                = "0.4"
reqwest            = { workspace = true }

[dev-dependencies]
tempfile           = "3"
serde              = { workspace = true }
libc               = "0.2"
