[package]
name         = "disk-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana CLI (Phase 1 stub)."

[[bin]]
name = "disk"
path = "src/main.rs"

[dependencies]
disk-core          = { path = "../disk-core" }
disk-client        = { path = "../disk-client" }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
rand               = { workspace = true }
hex                = "0.4"
base64             = "0.22"
rpassword            = "7.3"
reqwest            = { workspace = true }
serde_json         = { workspace = true }
prettydiff         = "0.9"

[dev-dependencies]
tempfile           = "3"
serde              = { workspace = true }
libc               = "0.2"
futures            = "0.3"
rcgen              = { workspace = true }
disk-client        = { path = "../disk-client" }
