[package]
name         = "disk-client"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana client daemon (Phase 1 stub)."

[[bin]]
name = "disk-client"
path = "src/main.rs"

[dependencies]
disk-core          = { path = "../disk-core" }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
