[package]
name         = "disk-client"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana gRPC client — Phase 3 transport."

[[bin]]
name = "disk-arcana-client"
path = "src/main.rs"

[lib]
name = "disk_client"
path = "src/lib.rs"

[dependencies]
disk-core          = { path = "../disk-core" }
disk-proto         = { path = "../disk-proto" }
tokio              = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
rustls             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio-stream       = { version = "0.1", features = ["net"] }
rcgen              = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
hex                = "0.4"
keyring            = { workspace = true }
pem                = { workspace = true }
notify             = { workspace = true }
rand               = { workspace = true }
axum               = { workspace = true }
serde_json         = { workspace = true }
time               = { workspace = true }
walkdir            = { workspace = true }
blake3             = { workspace = true }
tempfile           = "3"
reqwest            = { workspace = true }
mdns-sd            = { workspace = true }
if-addrs           = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand     = { workspace = true }
pem      = { workspace = true }
rcgen    = { workspace = true }
reqwest  = { workspace = true }
tower    = { version = "0.5", features = ["util"] }
