[package]
name         = "disk-proto"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Generated protobuf bindings for Disk Arcana wire format."

[dependencies]
tonic       = { workspace = true }
prost       = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
