[package]
name         = "disk-proto"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Generated protobuf bindings for Disk Arcana wire format."

[features]
# Gate gRPC reflection behind a non-default feature to prevent schema disclosure
# in production builds (DISK-0004 § 6 T-Schema-Disclosure).
dev-reflect = ["tonic-reflection"]

[dependencies]
tonic            = { workspace = true }
tonic-prost      = { workspace = true }
prost            = { workspace = true }
prost-types      = { workspace = true }
tonic-reflection = { version = "0.14", optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
