[package]
name         = "disk-server"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana gRPC server — Phase 3 transport."

[[bin]]
name = "disk-arcana-server"
path = "src/main.rs"

[features]
# Gate gRPC reflection to prevent schema disclosure in production.
dev-reflect = ["disk-proto/dev-reflect"]

[dependencies]
disk-core          = { path = "../disk-core" }
disk-proto         = { path = "../disk-proto" }
tokio              = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
rustls             = { workspace = true }
rcgen              = { workspace = true }
pem                = { workspace = true }
base32             = { workspace = true }
dashmap            = { workspace = true }
rand               = { workspace = true }
blake3             = { workspace = true }
zstd               = { workspace = true }
sqlx               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio-stream       = { version = "0.1", features = ["net"] }

[dev-dependencies]
tempfile     = "3"
tokio        = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
base64       = "0.22"
rustls       = { workspace = true }
