[package]
name         = "disk-server"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Disk Arcana gRPC server — Phase 3 transport."

[[bin]]
name = "disk-arcana-server"
path = "src/main.rs"

[features]
# Gate gRPC reflection to prevent schema disclosure in production.
dev-reflect = ["disk-proto/dev-reflect"]
# Publisher Ed25519 signature verification gate (P4b). Default-off; flip on in production.
publisher-verify = []

[dependencies]
disk-core          = { path = "../disk-core" }
disk-proto         = { path = "../disk-proto" }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml_ng      = { workspace = true }
tokio              = { workspace = true }
tonic              = { workspace = true }
prost              = { workspace = true }
rustls             = { workspace = true }
rcgen              = { workspace = true }
pem                = { workspace = true }
base32             = { workspace = true }
dashmap            = { workspace = true }
rand               = { workspace = true }
blake3             = { workspace = true }
zstd               = { workspace = true }
sqlx               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio-stream       = { version = "0.1", features = ["net"] }
notify             = { workspace = true }
ed25519-dalek      = { workspace = true }
reqwest            = { workspace = true }
async-trait = "0.1.89"

[dependencies.tempfile]
version = "3"

[dev-dependencies]
tempfile     = "3"
tokio        = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
base64       = "0.22"
rustls       = { workspace = true }
wiremock = "0.6.5"
proptest  = { workspace = true }
ed25519-dalek = { workspace = true }
